<resources>
            <string name="lifecardsdk_google_maps_key" templateMergeStrategy="preserve" translatable="false"></string>
    <string name="lifecardsdk_common_notify">Thông báo</string>
    <string name="lifecardsdk_common_accept">Đồng ý</string>
    <string name="lifecardsdk_common_close">Đóng</string>
    <string name="lifecardsdk_common_cancel">Hủy</string>
    <string name="lifecardsdk_common_buy_card">Mua thẻ</string>
    <string name="lifecardsdk_common_my_card">Thẻ của tôi</string>
    <string name="lifecardsdk_common_my_code">Mã của tôi</string>
    <string name="lifecardsdk_common_scan_qr_code">Quét mã</string>
    <string name="lifecardsdk_common_qr_code_used">Mã sử dụng</string>
    <string name="lifecardsdk_buy_card">Mua thẻ</string>
    <string name="lifecardsdk_my_card">Thẻ của tôi</string>
    <string name="lifecardsdk_Code_Used">Mã sử dụng</string>
    <string name="lifecardsdk_Scan_the_code">Quét mã</string>
    <string name="lifecardsdk_Still_validated">Còn hiệu lực</string>
    <string name="lifecardsdk_Expire">Hết hiệu lực</string>
    <string name="lifecardsdk_buy_card_title">Mua thẻ trả trước - Tiết kiệm thông minh</string>
    <string name="lifecardsdk_buy_card_lasted">Mới nhất</string>
    <string name="lifecardsdk_buy_card_price">Giá</string>
    <string name="lifecardsdk_buy_card_saving">Tiết kiệm nhất</string>
    <string name="lifecardsdk_filter_category">Danh mục</string>
    <string name="lifecardsdk_filter_provider">Nhà cung cấp</string>
    <string name="lifecardsdk_filter_location">Vị trí nhà cung cấp</string>
    <string name="lifecardsdk_filter_title">Bộ lọc tìm kiếm</string>
    <string name="lifecardsdk_filter_price_range">Khoảng giá(đ)</string>
    <string name="lifecardsdk_filter_apply">Áp dụng</string>
    <string name="lifecardsdk_filter_reset">Thiết lập lại</string>
    <string name="lifecardsdk_filter_over_2000k">Trên 2 triệu</string>
    <string name="lifecardsdk_filter_from_1000_to_2000K">Từ 1 – 2 triệu</string>
    <string name="lifecardsdk_filter_from_500_to_1000K">Từ 500K - 1 triệu</string>
    <string name="lifecardsdk_filter_less_than_500K">Dưới 500K</string>
    <string name="lifecardsdk_filter_price_min">Tối thiểu</string>
    <string name="lifecardsdk_filter_price_max">Tối đa</string>
    <string name="lifecardsdk_filter_expand_more">Xem thêm</string>
    <string name="lifecardsdk_filter_expand_less">Thu gọn</string>
    <string name="lifecardsdk_search_hint">Nhập thông tin tìm kiếm</string>
    <string name="lifecardsdk_home_bottom_nav_my_code">Mã của tôi</string>
    <string name="lifecardsdk_home_bottom_nav_my_card">Thẻ của tôi</string>
    <string name="lifecardsdk_home_bottom_nav_buy_card">Mua thẻ</string>
    <string name="lifecardsdk_buy_card_my_location">Gần bạn nhất</string>
    <string name="lifecardsdk_buycard_card_infomation">Thông tin thẻ</string>
    <string name="lifecardsdk_buycard_card_terms">Điều khoản</string>
    <string name="lifecardsdk_buycard_card_save_image">Lưu ảnh</string>
    <string name="lifecardsdk_buycard_card_share_qr">Chia sẻ QR</string>
    <string name="lifecardsdk_card_details">Chi tiết thẻ</string>
    <string name="lifecardsdk_buycard_payment">Thanh toán</string>
    <string name="lifecardsdk_buy_card_payment_id">Mã thanh toán</string>
    <string name="lifecardsdk_buy_card_orders_infor">Thông tin đơn hàng</string>
    <string name="lifecardsdk_buy_card_see_qr_code">Xem mã QR</string>
    <string name="lifecardsdk_buy_card_customer_infor">Thông tin khách hàng</string>
    <string name="lifecardsdk_buy_card_phone_number">Số điện thoại</string>
    <string name="lifecardsdk_buy_card_customer_name">Họ và tên</string>
    <string name="lifecardsdk_buy_card_payment_method">Phương thức thanh toán</string>
    <string name="lifecardsdk_buy_card_payment_gateways">Hình thức thanh toán</string>
    <string name="lifecardsdk_buy_card_select_payment_gateways">Chọn hình thức thanh toán</string>
    <string name="lifecardsdk_buy_card_total_payment">Số tiền (VNĐ)</string>
    <string name="lifecardsdk_buy_card_total_provisional">Tổng tạm tính</string>
    <string name="lifecardsdk_buy_card_continue_payment">Tiếp tục thanh toán</string>
    <string name="lifecardsdk_buy_card_use_limit">Hạn mức:</string>
    <string name="lifecardsdk_buy_card_use_limit_card">Hạn mức thẻ:</string>
    <string name="lifecardsdk_buy_card_expiration_date">Hạn sử dụng:</string>
    <string name="lifecardsdk_buy_card_details">Chi tiết</string>
    <string name="lifecardsdk_buy_card_terms_of_use">Điều khoản sử dụng</string>
    <string name="lifecardsdk_buycard_card_select_payment_method">Chọn phương thức thanh toán</string>
    <string name="lifecardsdk_home_bottom_nav_scan_qr">Quét mã</string>
    <string name="lifecardsdk_confirm">Xác nhận</string>
    <string name="lifecardsdk_buy_card_terms_and_condition">Điều khoản và điều kiện</string>
    <string name="lifecardsdk_buy_card_privacy_policy">Chính sách bảo mật</string>
    <string name="lifecardsdk_buy_card_terms_description">Bằng việc mua thẻ trả trước này, bạn đã đồng ý với điều khoản và điều kiện và chính sách bảo mật</string>
    <string name="lifecardsdk_payment_guide">Hướng dẫn thanh toán</string>
    <string name="lifecardsdk_payment_guide_direct">Tiền mặt</string>
    <string name="lifecardsdk_payment_guide_transfer">Chuyển khoản</string>
    <string name="lifecardsdk_settings">Cài đặt</string>
    <string name="lifecardsdk_buy_card_cant_find_location">Không tìm thấy địa điểm</string>
    <string name="lifecardsdk_buy_card_notify_permission_location">Bạn cần cho phép ứng dụng được cấp quyền truy cập vị trí</string>
    <string name="lifecardsdk_buy_card_turn_on_location">Chức năng vị trí đang bị tắt, bạn cần bật chức năng vị trí</string>
    <string name="lifecardsdk_buy_card_cant_find">Không có Thẻ trả trước nào phù hợp với từ khóa\nBạn vui lòng thử lại !</string>
    <string name="lifecardsdk_buy_card_notify_save_qr_success">Lưu hình ảnh thành công</string>
    <string name="lifecardsdk_buy_card_notify_save_qr_not_success">Lưu hình ảnh thất bại</string>
    <string name="lifecardsdk_my_code">Mã của tôi</string>
    <string name="lifecardsdk_Paid">Đã thanh toán</string>
    <string name="lifecardsdk_Wait_for_payment">Chờ thanh toán</string>
    <string name="lifecardsdk_card_deatil_wait_hange_payment_method">Đổi phương thức thanh toán</string>
    <string name="lifecardsdk_card_number">SỐ THẺ</string>
    <string name="lifecardsdk_card_number_no_uppercase">Số thẻ</string>
    <string name="lifecardsdk_card_name">HỌ TÊN</string>
    <string name="lifecardsdk_gift"><![CDATA[<u>vietjack.com</u>]]></string>
    <string name="Instruction_to_receive_gifts">Hướng dẫn nhận quà</string>
    <string name="lifecardsdk_Cash">Tiền mặt</string>
    <string name="lifecardsdk_transfer">Chuyển khoản</string>
    <string name="lifecardsdk_info_pakage">Thông tin dịch vụ</string>
    <string name="lifecardsdk_history_service">Lịch sử dịch vụ</string>
    <string name="lifecardsdk_buy_card_saving_">Tiết kiệm</string>
    <string name="lifecardsdk_buycard_package_details">Chi tiết dịch vụ</string>
    <string name="lifecardsdk_buycard_card_details">Chi tiết thẻ</string>
    <string name="lifecardsdk_provider_introduce">Giới thiệu</string>
    <string name="lifecardsdk_provider_branch">Chi nhánh</string>
    <string name="lifecardsdk_provider_card_list">Thẻ</string>
    <string name="lifecardsdk_Use_the_service">Sử dụng dịch vụ</string>
    <string name="lifecardsdk_Refund_of_service">Cấp hạn mức</string>
    <string name="lifecardsdk_provider_city">Tỉnh/TP</string>
    <string name="lifecardsdk_provider_district">Quận/Huyện</string>
    <string name="lifecardsdk_provider_village">Xã/Phường</string>
    <string name="lifecardsdk_provider_open">Mở cửa</string>
    <string name="lifecardsdk_provider_close">Đóng cửa</string>
    <string name="lifecardsdk_provider_open_">Mở cửa:</string>
    <string name="lifecardsdk_provider_list_branch">Danh sách chi nhánh</string>
    <string name="lifecardsdk_cant_find_branch">Không tìm thấy chi nhánh nào phù hợp tiêu chí tìm kiếm</string>
    <string name="title_activity_maps">Map</string>
    <string name="lifecardsdk_map_my_location">Vị trí của bạn</string>
    <string name="lifecardsdk_map_direction">Chỉ đường</string>
    <string name="lifecardsdk_buycard_card_product_code">Mã sản phẩm:" "</string>
    <string name="lifecardsdk_introduce_information">Thông tin chung</string>
    <string name="lifecardsdk_The_limit_is_provided">Hạn mức đã cấp</string>
    <string name="lifecardsdk_The_limit_is_provided_wait">Hạn mức thẻ</string>
    <string name="lifecardsdk_The_limit_remain_provided">Hạn mức còn lại</string>
    <string name="lifecardsdk_my_card_use_limit">Hạn mức</string>
    <string name="lifecardsdk_my_card_expiration_date">Hạn sử dụng</string>
    <string name="lifecardsdk_search_in">Tìm kiếm trong" "</string>
    <string name="lifecardsdk_payment_customer_information">Thông tin khách hàng</string>
    <string name="lifecardsdk_payment_order_information">Thông tin đơn hàng</string>
    <string name="lifecardsdk_customer_name">Họ tên" "</string>
    <string name="lifecardsdk_customer_phone_number">Số điện thoại" "</string>
    <string name="lifecardsdk_customer_enter_name">Nhập họ tên</string>
    <string name="lifecardsdk_customer_enter_phone_number">Nhập số điện thoại</string>
    <string name="lifecardsdk_continue">Tiếp tục</string>
    <string name="lifecardsdk_unknown_error">Dịch vụ không sẵn sàng. Quý khách vui lòng thử lại sau!</string>
    <string name="lifecardsdk_sever_error">Dịch vụ không sẵn sàng. Quý khách vui lòng thử lại sau!</string>
    <string name="lifecardsdk_time_out">Lỗi kết nối dịch vụ. Quý khách vui lòng thử lại!</string>
    <string name="lifecardsdk_cant_connect_internet">Mất kết nối mạng. Quý khách vui lòng kiểm tra lại wifi hoặc dữ liệu di động!</string>
    <string name="lifecardsdk_realtime_error">Có lỗi xảy ra. Quý khách vui lòng thử lại sau!</string>
    <string name="lifecardsdk_my_card_Use_at">Sử dụng tại</string>
    <string name="lifecardsdk_my_card_From_the_supplier">Từ nhà cung cấp </string>
    <string name="lifecardsdk_buy_card_code_orders">Mã đơn hàng</string>
    <string name="lifecardsdk_buy_card_total_money">Số tiền (VNĐ)</string>
    <string name="lifecardsdk_buycard_proceed_payment">Thanh toán</string>
    <string name="lifecardsdk_buy_card_provider">Nhà cung cấp dịch vụ</string>
    <string name="lifecardsdk_bank_name_acount">Tên tài khoản</string>
    <string name="lifecardsdk_bank_bank">Ngân hàng</string>
    <string name="lifecardsdk_bank_branch">Chi nhánh</string>
    <string name="lifecardsdk_bank_number_account">Số tài khoản</string>
    <string name="lifecardsdk_recharge_card_name">Tên thẻ</string>
    <string name="lifecardsdk_recharge_card_number">Số thẻ</string>
    <string name="lifecardsdk_recharge_listed_price">Hạn mức được sử dụng</string>
    <string name="lifecardsdk_recharge_trans_details">Thông tin giao dịch</string>
    <string name="lifecardsdk_recharge_payment_method">Hình thức thanh toán</string>
    <string name="lifecardsdk_recharge_total_payment_price">Số tiền thanh toán</string>
    <string name="lifecardsdk_user_manager_card_information">Thông tin thẻ</string>
    <string name="lifecardsdk_user_manager_card_name">Tên thẻ</string>
    <string name="lifecardsdk_user_manager_card_number">Số thẻ</string>
    <string name="lifecardsdk_user_manager_list_user">Danh sách người dùng chung</string>
    <string name="lifecardsdk_user_manager_add_user">Thêm người dùng chung</string>
    <string name="lifecardsdk_user_manager_phone_number">Số điện thoại</string>
    <string name="lifecardsdk_user_manager_user_name">Họ tên</string>
    <string name="lifecardsdk_user_manager_add">Thêm</string>
    <string name="lifecardsdk_user_manager_hint_name">Nhập họ tên </string>
    <string name="lifecardsdk_user_manager_hint_phone_number">Nhập số điện thoại </string>
</resources>